c11.out
   Compiling rp-pico v0.7.0 (/home/pi/rp-hal-boards/boards/rp-pico)
error[E0603]: struct `I2CBlock` is private
  --> boards/rp-pico/examples/b_blinky.rs:92:38
   |
92 |     rp2040_hal::I2C<rp2040_hal::i2c::I2CBlock, rp2040_hal::gpio::Pins>,
   |                                      ^^^^^^^^ private struct
   |
note: the struct `I2CBlock` is defined here
  --> /home/pi/.cargo/registry/src/github.com-1285ae84e5963aae/rp2040-hal-0.8.1/src/i2c.rs:59:11
   |
59 | use pac::{i2c0::RegisterBlock as I2CBlock, I2C0, I2C1, RESETS};
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `core::fmt::Write as FmtWrite`
 --> boards/rp-pico/examples/b_blinky.rs:6:5
  |
6 | use core::fmt::Write as FmtWrite;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `rp_pico::entry`
  --> boards/rp-pico/examples/b_blinky.rs:10:5
   |
10 | use rp_pico::entry;
   |     ^^^^^^^^^^^^^^

warning: unused imports: `Operation`, `Read`, `Transactional`, `WriteIter`, `Write`
  --> boards/rp-pico/examples/b_blinky.rs:21:35
   |
21 | use embedded_hal::blocking::i2c::{Operation, Read, Transactional, Write, WriteIter};
   |                                   ^^^^^^^^^  ^^^^  ^^^^^^^^^^^^^  ^^^^^  ^^^^^^^^^

error[E0599]: no method named `set_dac` found for struct `I2C` in the current scope
   --> boards/rp-pico/examples/b_blinky.rs:127:19
    |
127 |        let res = dac.set_dac(PowerDown::Normal, SIN_TABLE[IDX] as u16);
    |                      ^^^^^^^ method not found in `I2C<RegisterBlock, Pins>`

error[E0308]: mismatched types
   --> boards/rp-pico/examples/b_blinky.rs:248:76
    |
248 |             LED_AND_ALARM_AND_DAC.borrow(cs).replace(Some((led_pin, alarm, dac)));
    |                                                                            ^^^ expected struct `I2C`, found struct `MCP4725`
    |
    = note: expected struct `rp2040_hal::I2C<rp_pico::rp2040_pac::i2c0::RegisterBlock, rp2040_hal::gpio::Pins>`
               found struct `MCP4725<I2C<I2C1, (Pin<Gpio26, Function<I2C>>, Pin<Gpio27, Function<I2C>>)>>`
            the full type name has been written to '/home/pi/rp-hal-boards/target/thumbv6m-none-eabi/release/examples/b_blinky-12516c690e1deb96.long-type-4260837071144188057.txt'

warning: unused import: `embedded_hal::digital::v2::OutputPin`
  --> boards/rp-pico/examples/b_blinky.rs:11:5
   |
11 | use embedded_hal::digital::v2::OutputPin;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Some errors have detailed explanations: E0308, E0599, E0603.
For more information about an error, try `rustc --explain E0308`.
warning: `rp-pico` (example "b_blinky") generated 4 warnings
error: could not compile `rp-pico` due to 3 previous errors; 4 warnings emitted
